# racesim-engineer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  qt instalation cmd.txt
include/netcom/: Facade.h
src/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  main.cpp
src/core/: CMakeLists.txt
src/core/data/: GeneralData.cpp
src/core/data/internal/: LapTime.cpp  TyreData.cpp
src/core/packets/: Broadcaster.cpp  Helper.cpp
src/core/packets/F1_23/: CarMotionData.cpp  Header.cpp  IPacket.cpp  LapData.cpp  SessionData.cpp
src/core/packets/event/: Broadcaster.cpp  CMakeLists.txt  Interface.cpp  LapFinished.cpp  Overtake.cpp  ParticipantStatusChanged.cpp  PenaltyReceived.cpp  PracticeStart.cpp  QualiStart.cpp  RaceStart.cpp  RoundSessionEnd.cpp  TimeTrialEnd.cpp  TimeTrialStart.cpp  TyreChanged.cpp
src/core/packets/game/: Broadcaster.cpp  Helper.cpp
src/core/packets/internal/: Broadcaster.cpp  CMakeLists.txt  GridPosition.cpp  Interface.cpp  LapStatus.cpp  MPSessionStart.cpp  ParticipantStatus.cpp  PenaltyStatus.cpp  SessionEnd.cpp  SessionParticipants.cpp  SessionSettings.cpp  SessionStart.cpp  SessionStartSettings.cpp  SoloSessionStart.cpp  Standings.cpp  TyreSetUsage.cpp
src/core/settings/: ISetting.cpp  Interface.cpp  StoreFront.cpp
src/general/data/: CMakeLists.txt  GeneralData.cpp
src/general/data/src/: GeneralData.cpp
src/generalizer/: CMakeLists.txt  Facade.cpp
src/generalizer/adapters/: F1_25.cpp  F1_25.h  Interface.h
src/generalizer/maps/: F1_25.cpp  F1_25.h
src/netcom/: CMakeLists.txt  Facade.cpp
src/netcom/adapters/: F1_23.cpp  F1_23.h  F1_25.cpp  F1_25.h  Interface.h  SessionStateMachine.cpp  SessionStateMachine.h
src/netcom/adapters/F1_23/: DataConversionMaps.cpp  DataConversionMaps.h  Facade.cpp  Facade.h  PenaltyBuilder.cpp  PenaltyBuilder.h  SessionStartBuilder.cpp  SessionStartBuilder.h
src/netcom/adapters/F1_24/: DataConversionMaps.cpp  DataConversionMaps.h  Facade.cpp  Facade.h  SessionStartBuilder.cpp  SessionStartBuilder.h
src/netcom/adapters/F1_25/: DataConversionMaps.cpp  DataConversionMaps.h  Facade.cpp  Facade.h  SessionStartBuilder.cpp  SessionStartBuilder.h
src/netcom/converter/: PacketGeneralizer.cpp  PacketGeneralizer.h
src/netcom/listener/: Director.cpp  Director.h  F123Adapter.cpp  F123Adapter.h  IGameAdapter.h  ISocket.h  SocketBase.cpp  SocketBase.h  UDPSocketWin64.cpp  UDPSocketWin64.h
src/netcom/packet_builders/: Header.cpp  Header.h
src/netcom/packets/: CMakeLists.txt  Event.cpp  EventData.cpp  Header.cpp  Helper.cpp  Helper.h  IPacket.cpp  SessionData.cpp
src/netcom/packets/F1_23/: CarDamageData.cpp  CarMotionData.cpp  CarSetupData.cpp  CarStatusData.cpp  CarTelemetryData.cpp  EventData.cpp  Header.cpp  IPacket.cpp  LapData.cpp  ParticipantData.cpp  SessionData.cpp  SessionHistoryData.cpp  StandingsData.cpp  TyreSetData.cpp
src/presenter/: CMakeLists.txt  Presenter.cpp
src/processor/: CMakeLists.txt  Facade.cpp  FileIO.cpp
src/processor/data/: DataInterface.h  Databank.cpp  Databank.h  DriverRecord.cpp  DriverRecord.h  DriverState.cpp  DriverState.h  RecordCreator.cpp  RecordCreator.h  SessionRecord.cpp  SessionRecord.h  SessionState.cpp  SessionState.h
src/processor/data/creators/: Interface.h  RaceSession.cpp  RaceSession.h
src/processor/data/holders/: DriverInfo.h  LapHistoryData.cpp  LapHistoryData.h  LapInfo.h  LapTimeData.h  PositionTimingData.cpp  PositionTimingData.h  WarningPenaltyData.cpp  WarningPenaltyData.h
src/processor/detectors/: DriverStatus.cpp  DriverStatus.h  FastestLap.cpp  FastestLap.h  FinishedLap.cpp  FinishedLap.h  Interface.cpp  Interface.h  LapFinished.cpp  LapFinished.h  Overtake.cpp  Overtake.h  ParticipantStatusChanged.cpp  ParticipantStatusChanged.h  PenaltyReceived.cpp  PenaltyReceived.h  SessionStartDataReady.cpp  SessionStartDataReady.h  Type.h  TyreChanged.cpp  TyreChanged.h  WarningPenalty.cpp  WarningPenalty.h
src/processor/exporters/: Interface.h  RaceSchema.h  RaceSession.cpp  RaceSession.h
src/settings/: CMakeLists.txt  Defaults.h  GeneralSettings.cpp  Schema.h  Store.cpp  StoreFront.cpp
src/ui/: CMakeLists.txt  CustomMainWindow.cpp  CustomMainWindow.h  EventAnnouncer.cpp  EventAnnouncer.h  PacketHandler.cpp  PacketHandler.h  UIStarter.cpp
src/ui/base/: Element.cpp  Element.h  Helper.cpp  Helper.h  IDualPanelScreen.cpp  IDualPanelScreen.h  IPanel.cpp  IPanel.h  IScreen.cpp  IScreen.h  ISinglePanelScreen.cpp  ISinglePanelScreen.h  ScreenType.h  WidgetId.h
src/ui/base/elements/: ImageElement.cpp  ImageElement.h  TextElement.cpp  TextElement.h
src/ui/core/: Image.h  PixmapFactory.cpp  PixmapFactory.h  ScreenType.h  StyleSheetFactory.cpp  StyleSheetFactory.h
src/ui/core/styles/: General.h  Loading.h  Standings.h
src/ui/panels/: FreePracticeLeft.cpp  FreePracticeLeft.h  FreePracticeRight.cpp  FreePracticeRight.h  Interface.cpp  Interface.h  Loading.cpp  Loading.h  LoadingLeft.cpp  LoadingLeft.h  LoadingRight.cpp  LoadingRight.h  QualifyingLeft.cpp  QualifyingLeft.h  QualifyingRight.cpp  QualifyingRight.h  RaceLeft.cpp  RaceLeft.h  RaceRight.cpp  RaceRight.h  TimeTrialLeft.cpp  TimeTrialLeft.h  TimeTrialRight.cpp  TimeTrialRight.h
src/ui/screens/: DualPanelInterface.cpp  DualPanelInterface.h  Example.cpp  FreePractice.cpp  FreePractice.h  Interface.cpp  Interface.h  Loading.cpp  Loading.h  Qualifying.cpp  Qualifying.h  Race.cpp  Race.h  SinglePanelInterface.cpp  SinglePanelInterface.h  TimeTrial.cpp  TimeTrial.h
src/ui/styles/: General.h  Loading.h
src/ui/widgets/: Background.cpp  Background.h  BackgroundFullScreen.cpp  BackgroundFullScreen.h  BackgroundLeft.cpp  BackgroundLeft.h  BackgroundRight.cpp  BackgroundRight.h  CMakeLists.txt  LoadingIcon.cpp  LoadingIcon.h  ScreenTitle.cpp  ScreenTitle.h
src/ui/widgets/base/: ButtonInterface.cpp  ButtonInterface.h  Container.cpp  Container.h  ID.h  ImageInterface.cpp  ImageInterface.h  Interface.cpp  Interface.h  TextInterface.cpp  TextInterface.h
test/integration_testing/: CMakeLists.txt  CMakePresets.json
test/integration_testing/src/: main.cpp
(+322 files in other folders)
